# homework

./: CMakeLists.txt
tests/: 01-06test.cpp  07-12test.cpp  13-18test.cpp  19-24test.cpp
