cmake_minimum_required(VERSION 3.16)

project(NlohmannJsonGTestCI LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

enable_testing()

include(FetchContent)

# дё‹иЅЅ GoogleTest
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)

# Windows дё‹йЃїе…ЌиїђиЎЊж—¶еє“дёЌдёЂи‡ґй—®йў?
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(googletest)

# дё‹иЅЅ nlohmann/json
FetchContent_Declare(
    nlohmann_json
    URL https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz
)

FetchContent_MakeAvailable(nlohmann_json)

file(GLOB TEST_SOURCES CONFIGURE_DEPENDS
    ${CMAKE_SOURCE_DIR}/tests/*.cpp
)

add_executable(json_tests
    ${TEST_SOURCES}
)

target_include_directories(json_tests
    PRIVATE
    ${CMAKE_SOURCE_DIR}/third_party
)

target_link_libraries(json_tests
    PRIVATE
    GTest::gtest_main
    nlohmann_json::nlohmann_json
)

include(GoogleTest)
gtest_discover_tests(json_tests)
